--- a/vignettes/articles/DevelopersGuide.Rmd
+++ b/vignettes/articles/DevelopersGuide.Rmd
@@ -84,11 +84,25 @@ A valid Slick Object must include at least one Slick Plot.
 
 The plots and tables can also be viewed in the *Slick App*, an interactive application developed with [Shiny](https://shiny.posit.co/). The Slick App allows users to upload their data and customize the plots by filtering by management procedures, operating models, and performance indicators.
 
+## Running the App Locally
+
 The App can be launched directly from the R console with:
 
 ```{r launch_app, eval=FALSE}
 App()
 ```
+
+This command will open the *Slick App* in the web browser on your machine. From there you can either select one of the case studies included in `Slick`, or load your `Slick` object (see sections below for creating a `Slick` object) by uploading your  *.slick* file.
+
+Alternatively, if you have a `Slick` object loaded in the R console, you can launch the App directly with the object by using a named argument in the `App` call:
+
+```{r launch_app_2, eval=FALSE}
+App(slick=MySlickObject)
+```
+
+where `MySlickObject` is an object of class `Slick`.
+
+## Using the Online App
 
 The App is also hosted [online](https://shiny.bluematterscience.com/app/slick).
 
@@ -152,6 +166,8 @@ The `runMSE` function is used to spool up the historical fishery dynamics and ru
 ```{r run_MSEs, cache=TRUE}
 
 ```
+
+
 
 In the sections below, these MSE objects will be used to calculate the performance indicators for each [Slick Plot](#slickplot).
 
