--- a/vignettes/articles/DevelopersGuide.Rmd
+++ b/vignettes/articles/DevelopersGuide.Rmd
@@ -46,7 +46,7 @@ Please use the [Issues](https://github.com/Blue-Matter/Slick/issues) feature in 
 
 ## Acknowledgements
 
-`Slick` was developed by [Blue Matter Science](https://www.bluematterscience.com) and designed and commissioned by [The Ocean Foundation's](https://oceanfdn.org/) International Fisheries Conservation Project and [harveststrategies.org](https://www.harveststrategies.org), with support from [The Pew Charitable Trusts](https://www.pewtrusts.org) and the [Common Oceans Tuna Fisheries Project](https://www.fao.org/in-action/commonoceans/what-we-do/tuna/en/) which is funded by [GEF](https://www.thegef.org/what-we-do/topics/areas-beyond-national-jurisdiction) and implemented by the [FAO](https://www.fao.org/in-action/commonoceans/en/).
+`Slick` was developed by [Blue Matter Science](https://www.bluematterscience.com) and designed and commissioned by [The Ocean Foundation's](https://oceanfdn.org/) International Fisheries Conservation Project and [https://harveststrategies.org/](https://www.harveststrategies.org), with support from [The Pew Charitable Trusts](https://www.pewtrusts.org) and the [Common Oceans Tuna Fisheries Project](https://www.fao.org/in-action/commonoceans/what-we-do/tuna-fisheries/en/) which is funded by [GEF](https://www.thegef.org/what-we-do/topics/areas-beyond-national-jurisdiction) and implemented by the [FAO](https://www.fao.org/in-action/commonoceans/en/).
 
 The prototype figure designs were developed by [5W Infographics](https://www.5wgraphics.com/).
 
