--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ library(Slick)
 
 ## The Slick object
 
-To use `Slick`, the results of an MSE must be available in a Slick data object. The Slick App includes several example data objects. See the [Developer's Guide](articles/DevelopersGuide.html) for documentation on creating a Slick Data object for your MSE results.
+To use `Slick`, the results of an MSE must be available in a Slick data object. The Slick App includes several example data objects. See the [Developer's Guide](https://slick.bluematterscience.com/articles/DevelopersGuide.html) for documentation on creating a Slick Data object for your MSE results.
 
 ## The Slick App
 
